created responsive header for main portfolio website

--- a/index.html
+++ b/index.html
@@ -11,7 +11,22 @@
   <!-- <h1 id="Diatype">Jinwook Shin's Portfolio Website</h1>
   <h1 id="DiatypeMono">Jinwook Shin's Portfolio Website</h1>
   <h1 id="DiatypeSemiMono">Jinwook Shin's Portfolio Website</h1> -->
-  <h1>Jinwook Shin's Portfolio Website</h1>
+  <header>
+    <div class="container container-nav">
+      <div class="site-title">
+        <h1>Jinwook Shin</h1>
+        <p class="subtitle">Portfolio website showcasing front-end projects</p>
+      </div>
+      <nav>
+        <ul>
+            <li><a href="#">Home</a></li>
+            <li><a href="#">About me</a></li>
+            <li><a href="#">Contact</a></li>
+        </ul>
+      </nav>  
+    </div> <!--/ .container container-nav -->
+  </header>
+
   <span id="subheading">
     <h2 id="directory">Directory</h2> <h2 id="developing-duration">Developing Duration</h2>
   </span>
@@ -57,7 +72,7 @@
     </div>
   </div>
   <br><hr>
-  <h1>Portfolio</h1>
+  <div class="portfolio-section-title">Portfolio</div>
   <div id="portfolio-intro">Soon to be updated in February, 2021</div>
 </body>
 </html>
