feat(update): new html5 project initialize
built new HTML5 that supports responsive for desktop and mobile

--- a/html5portfolio/index.html
+++ b/html5portfolio/index.html
@@ -33,7 +33,7 @@
 
   <div class="split right-top">
     <div id="canvasAndFrame">
-      <canvas id="frame"></canvas> 
+      <!-- <canvas id="frame"></canvas>  -->
       <canvas id="canvasOne"></canvas><br>
     </div>
     <!-- <div id="canvasAndFrame" width="641" height="462.933">
