feat(update): responsive web

--- a/new_html5_from_beginning/index.html
+++ b/new_html5_from_beginning/index.html
@@ -33,7 +33,8 @@
     <div class="canvasContainer">
       <canvas id="canvas"></canvas>
       <div class="output">
-        <img id="photo" alt="The screen capture will appear in this box."> 
+        <img id="photo"> 
+        <!-- <img id="photo" alt="The screen capture will appear in this box.">  -->
       </div>
 
       <div class="canvasButtonsContainer">
