feat(update): New HTML5 footer added

--- a/new_html5/index.html
+++ b/new_html5/index.html
@@ -49,5 +49,9 @@
     
   </div>
   <button id="startbutton">Take photo</button> 
+  <footer>
+    <p><strong>Jinwook Shin</strong></p>
+    <p>Copyright &copy; 2021</p>
+  </footer>
 </body>
 </html>
