--- a/new_html5/index.html
+++ b/new_html5/index.html
@@ -32,10 +32,10 @@
     
     <div class="canvasContainer">
       <canvas id="canvas"></canvas>
-      <div class="output">
-        <img id="photo"> 
+      <!-- <div class="output"> -->
+        <!-- <img id="photo">  -->
         <!-- <img id="photo" alt="The screen capture will appear in this box.">  -->
-      </div>
+      <!-- </div> -->
 
       <div class="canvasButtonsContainer">
         <div class="canvasButtonPenContainer">
