feat(update): css refactoring
Two more things need to be updated:
1. touch draw
2. canvas height auto

--- a/new_html5/index.html
+++ b/new_html5/index.html
@@ -58,7 +58,7 @@
     </div>
     
   </div>
-  <button id="startbutton">Take photo</button> 
+  <!-- <button id="startbutton">Take photo</button>  -->
   <footer class="footer">
     <p>&copy; 2021 Jinwook Shin</p>
     <!-- <p>Copyright &copy; 2021</p> -->
