--- a/doraemonJSminiGamePortfolio/index.html
+++ b/doraemonJSminiGamePortfolio/index.html
@@ -1,25 +1,35 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <style>
-    body{
-        background-image: linear-gradient(to right, red,orange,yellow,green,blue,indigo,violet);
-    }
-  </style>
   <title>Doraemon CanvasJS Project</title>
   <meta charset="utf-8">
   <script src="doraemonJSminiGame.js" type="text/javascript" defer></script>
+  <link rel="stylesheet" href="./style.css">
 </head>
 
 <body>
-  <h2>Doraemon CanvasJS Project</h2>
-  <strong>Instruction : Use the arrow keys or the buttons provided to play the game!</strong><br>
-  <canvas id="myCanvas" style="border-style: solid" width="600px" height="400px"></canvas><br>
-  <button type="button" onclick="moveLeft()">Left</button>
-  <button type="button" onclick="moveRight()">Right</button>
-  <button type="button" onclick="startTimer()">Start</button>
-  <button type="button" onclick="stopTimer()">Stop</button><br><br>
-  Dorayaki goal: <strong><span id="goaldisplay"></span></strong>&nbsp;&nbsp;|
-  Dorayaki caught:<strong><span id="output"></span></strong>
+  <header>
+    <h1 class="title">Doraemon CanvasJS Project</h1>
+    <p class="instruction">Instruction : Use the "arrow keys" or the "buttons" provided to achieve the desired score!</p>
+  </header>
+
+  <div class="scoreContainer">
+    <p class="scoreContent">Dorayaki goal: <strong><span id="goaldisplay"></span></strong>&nbsp;&nbsp;|</p>
+    <p class="scoreContent">Dorayaki caught:<strong><span id="output"></span></strong></p>
+  </div>
+
+  <div class="container">
+    <div class="canvasContainer">
+      <canvas id="canvas" style="border-style: solid" width="600px" height="400px"></canvas><br>
+    </div>
+
+    <div class="buttonContainer">
+      <button type="button" onclick="moveLeft()">Left</button>
+      <button type="button" onclick="moveRight()">Right</button>
+      <button type="button" onclick="startTimer()">Start</button>
+      <button type="button" onclick="stopTimer()">Stop</button><br><br>
+    </div>
+
+  </div>
 </body>
 </html>
