--- a/doraemonJSminiGamePortfolio/index.html
+++ b/doraemonJSminiGamePortfolio/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Doraemon CanvasJS Project</title>
+  <title>DDoraemon CanvasJS Project</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
   <script src="doraemonJSminiGame.js" type="text/javascript" defer></script>
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.2/css/all.css" integrity="sha384-vSIIfh2YWi9wW0r9iZe7RJPrKwp6bG+s9QZMoITbCckVJqGCCRhc+ccxNcdpHuYu" crossorigin="anonymous">
