--- a/doraemonJSminiGamePortfolio/index.html
+++ b/doraemonJSminiGamePortfolio/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>DDoraemon CanvasJS Project</title>
+  <title>Doraemon CanvasJS Project</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
   <script src="doraemonJSminiGame.js" type="text/javascript" defer></script>
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.2/css/all.css" integrity="sha384-vSIIfh2YWi9wW0r9iZe7RJPrKwp6bG+s9QZMoITbCckVJqGCCRhc+ccxNcdpHuYu" crossorigin="anonymous">
@@ -13,7 +13,7 @@
 
 <body>
   <header>
-    <h1 class="title">Doraemon canvasAPI MiniGame</h1>
+    <h1 class="title">DDoraemon canvasAPI MiniGame</h1>
     <!-- <p class="instruction">Instruction : Use the "arrow keys" or the "buttons" provided to achieve the desired score!</p> -->
   </header>
 
