feat(update): finalizing code for the following portfolio

--- a/doraemonJSminiGamePortfolio/index.html
+++ b/doraemonJSminiGamePortfolio/index.html
@@ -13,7 +13,7 @@
 
 <body>
   <header>
-    <h1 class="title">DDoraemon canvasAPI MiniGame</h1>
+    <h1 class="title">Doraemon canvasAPI MiniGame</h1>
     <!-- <p class="instruction">Instruction : Use the "arrow keys" or the "buttons" provided to achieve the desired score!</p> -->
   </header>
 
