--- a/pokemonAPIportfolio/index.html
+++ b/pokemonAPIportfolio/index.html
@@ -41,7 +41,7 @@
     </footer>
 
     <!-- 5. no-mobile: for mobile landscape -->
-    <div id="no-mobile">
+    <div class="no-mobile">
       <div id="no-mobile-title">PokemonAPI JS Portfolio </div>
       <div id="no-mobile-alert">Please use a portrait mode or a bigger (770px * 495px) landscape mode to view this page.</div>
     </div>
