feat(update): about-me page updated

--- a/index.html
+++ b/index.html
@@ -29,23 +29,23 @@
       <div class="portfolio-section-title">목차</div>
       <div id="child-directory">
         <span class="file-individual">
-          <i class="far fa-file-alt"></i><a href="./dogAPIreactPortfolio/build/index.html"> <i class="fab fa-react" style="color: rgb(18, 171, 241);"></i> Dog API portfolio </a>&nbsp;(Desktop ✅ | Mobile soon ⚠️)
+          <i class="far fa-file-alt"></i><a href="./dogAPIreactPortfolio/build/index.html"> <i class="fab fa-react" style="color: rgb(18, 171, 241);"></i> Dog API 포트폴리오 </a>
         </span>
 
         <span class="file-individual">
-          <i class="far fa-file-alt"></i><a href="./noteReactPortfolio/build/index.html"> <i class="fab fa-react" style="color: rgb(18, 171, 241);"></i> Note App react portfolio </a>&nbsp;(Desktop ✅ | Mobile ✅)
+          <i class="far fa-file-alt"></i><a href="./noteReactPortfolio/build/index.html"> <i class="fab fa-react" style="color: rgb(18, 171, 241);"></i> 노트 앱 포트폴리오 </a>
         </span>
 
         <span class="file-individual">
-          <i class="far fa-file-alt"></i><a href="./pokemonAPIportfolio/index.html"> <i class="fab fa-js-square" style="color: rgb(255, 196, 0);"></i> pokemonAPI portfolio </a>&nbsp;(Desktop ✅ | Mobile ✅)
+          <i class="far fa-file-alt"></i><a href="./pokemonAPIportfolio/index.html"> <i class="fab fa-js-square" style="color: rgb(255, 196, 0);"></i> Pokemon API 포트폴리오 </a>
         </span>
         
         <span class="file-individual">
-          <i class="far fa-file-alt"></i><a href="./html5portfolio/index.html""> <i class="fab fa-html5" style="color: rgb(250, 88, 59);"></i> HTML5 portfolio </a>&nbsp;(Desktop ✅ | Mobile soon ✅)
+          <i class="far fa-file-alt"></i><a href="./html5portfolio/index.html""> <i class="fab fa-html5" style="color: rgb(250, 88, 59);"></i> HTML5 WebRTC & Canvas API 포트폴리오 </a>
         </span>
         
         <span class="file-individual">
-          <i class="far fa-file-alt"></i><a href="./doraemonJSminiGamePortfolio/index.html"> <i class="fab fa-js-square" style="color: rgb(255, 196, 0);"></i> Doraemon portfolio </a>&nbsp;(Desktop ✅ | Mobile soon ✅)
+          <i class="far fa-file-alt"></i><a href="./doraemonJSminiGamePortfolio/index.html"> <i class="fab fa-js-square" style="color: rgb(255, 196, 0);"></i> 도라에몽 미니게임 포트폴리오 </a>
         </span>
       </div>
     </div>
@@ -114,7 +114,7 @@
         </article>
 
         <article class="portfolio-container">
-          <h2 class="portfolio-title"><a href="./html5portfolio/index.html""> <i class="fab fa-html5" style="color: rgb(250, 88, 59);"></i> WebRTC & Canvas API 포트폴리오</a></h2>
+          <h2 class="portfolio-title"><a href="./html5portfolio/index.html""> <i class="fab fa-html5" style="color: rgb(250, 88, 59);"></i> HTML5 WebRTC & Canvas API 포트폴리오</a></h2>
           <div class="portfolio-image-container">
             <img src="./img/html5CanvasPortfolio.png" alt="html5 canvas portfolio image">
           </div>
