feat(update): contact added

--- a/contact.html
+++ b/contact.html
@@ -24,7 +24,21 @@
     </div> 
   </header>
 
-
+  <!-- <div class="container container-flex">
+    <main role="main"> -->
+  <div class="portfolio-section-title">연락처</div>
+  <div class="contact-container">
+    <div id="contact-container-phone">
+      <h2>Phone</h2>
+      <div id="phoneNumber">010-2450-3820</div>
+    </div>
+    <div id="contact-container-email">
+      <h2>Email</h2>
+      <div id="emailAddress">7inug1@gmail.com</div>
+    </div>
+  </div>
+<!-- </main>    
+</div> -->
 
   <footer>
     <small>Copyright &copy; 2021 Jinwook Shin</small><br>
