--- a/about-me.html
+++ b/about-me.html
@@ -26,7 +26,14 @@
 
   <div class="container container-flex">
     <main role="main">
-      <img src="img/about-me.jpg">
+      <div class="portfolio-section-title">링크</div>
+      <div class="links-container">
+        <div id="links github-link"><h3><i class="fab fa-github"></i><a href="https://github.com/7inug1">&nbsp;github.com/7inug1</a></h3></div>&nbsp;&nbsp;&nbsp;&nbsp;
+        <div id="links resume-link"><h3><i class="fas fa-file-pdf"></i> <a href="./downloads/신진욱_프론트엔드_이력서.pdf" download>&nbsp;신진욱_프론트엔드_이력서.pdf</a></h3></div><br>
+      </div>
+      
+      <div class="portfolio-section-title">자기소개</div>
+      <img src="./img/about-me.jpg" alt="신진욱 프로필 사진">
       <h2>곧 프론트엔드 개발자가 될 신진욱입니다. </h2>
 
       <p>
