feat(update): portfolio website finalize

--- a/contact.html
+++ b/contact.html
@@ -24,21 +24,19 @@
     </div> 
   </header>
 
-  <!-- <div class="container container-flex">
-    <main role="main"> -->
+
   <div class="portfolio-section-title">연락처</div>
   <div class="contact-container">
     <div id="contact-container-phone">
       <h2>Phone</h2>
-      <div id="phoneNumber">010-2450-3820</div>
+      <div id="phoneNumber"><a href="sms:010-2450-3820">010-2450-3820 (sms)</a></div>
     </div>
     <div id="contact-container-email">
       <h2>Email</h2>
-      <div id="emailAddress">7inug1@gmail.com</div>
+      <div id="emailAddress"><a href="mailto:7inug1@gmail.com">7inug1@gmail.com</a></div>
     </div>
   </div>
-<!-- </main>    
-</div> -->
+  <div id=""></div><div></div><div></div><div></div>
 
   <footer>
     <small>Copyright &copy; 2021 Jinwook Shin</small><br>
