--- a/index.html
+++ b/index.html
@@ -55,13 +55,19 @@
     <div class="container container-flex">
       <main role="main">
         <article class="portfolio-container">
-          <h2 class="portfolio-title"><a href="./dogAPIreactPortfolio/build/index.html"> <i class="fab fa-react" style="color: rgb(18, 171, 241);"></i> Dog API 포트폴리오 </a></h2>
+          <h2 class="portfolio-title">
+            <a href="./dogAPIreactPortfolio/build/index.html"> 
+              <i class="fab fa-react" style="color: rgb(18, 171, 241);"></i> 
+              1. Dog API 포트폴리오 
+            </a>
+          </h2>
           <div class="portfolio-image-container">
             <img src="./img/reactDogApiPortfolio.png" alt="react dog api portfolio image">
           </div>
           <Details>
-            <summary><strong>👇 Keyword</strong>: React, Mongoose, MongoDB, Express, Axios</summary>
+            <summary>사용한 기술 보기</summary>
             <p class="portfolio-body">
+              <strong>Keyword</strong>: React, Mongoose, MongoDB, Express, Axios 
               <p>•리액트와 백엔드 툴(Mongoose, mongoDB, express)을 이용하여 Dog API & Database 풀스택 어플리케이션을 제작함. </p>
               <p>•상위 App 컴포넌트와 하위 Chooser, Details, DetailForms, DetailViews 컴포넌트를 제작하여 직관적이고 유지/보수하기 용이하게 프로그램을 제작함. state와 props를 이용하여 부모/자식 컴포넌트 사이의 변수 전달이 수월하게끔 함.</p>
               <p>•두 개의 form에서 데이터가 잘 처리될 수 있게 알맞은 이벤트 메소드를 만들어 리액트에서는 사용자의 인풋을 state를 사용하여 어떻게 처리하는지 이해하게 됨.</p>
@@ -74,13 +80,19 @@
         </article>
           
         <article class="portfolio-container">
-          <h2 class="portfolio-title"><a href="./noteReactPortfolio/build/index.html"> <i class="fab fa-react" style="color: rgb(18, 171, 241);"></i> 노트 앱 포트폴리오</a></h2>
+          <h2 class="portfolio-title">
+            <a href="./noteReactPortfolio/build/index.html">
+              <i class="fab fa-react" style="color: rgb(18, 171, 241);"></i> 
+              2. 노트 앱 포트폴리오
+            </a>
+          </h2>
           <div class="portfolio-image-container">
             <img src="./img/reactNoteAppPortfolio.png" alt="react note app portfolio image">
           </div>
           <Details>
-            <summary><strong>👇 Keyword</strong>: React, CSS, Grid</summary>
+            <summary>사용한 기술 보기</summary>
             <p class="portfolio-body">
+              <strong>Keyword</strong>: React, CSS, Grid
               <p>•리액트를 사용하여 동적 프로그램인 노트 관리 프로그램을 만들어 HTML/JavaScript로 만든 어플리케이션과 리액트 어플리케이션 간의 생산성과 유지/보수 차이를 경험하고자 하였음. </p>
               <p>•상위의 App 컴포넌트에 state를, 하위의 Form, Note, Tag 컴포넌트에 props로 데이터를 전달하여 컴포넌트 구성의 직관성을 높이고 유지/보수를 용이하게 함.</p>
               <p>•Form에 입력되는 여러 데이터를 처리하기 위한 여러 이벤트 메소드를 제작하여 사용자가 입력하는 값을 state로 어떻게 관리하는지 이해하게 됨.</p>
@@ -93,13 +105,19 @@
         </article>
           
         <article class="portfolio-container">
-          <h2 class="portfolio-title"><a href="./pokemonAPIportfolio/index.html"> <i class="fab fa-js-square" style="color: rgb(255, 196, 0);"></i> Pokemon API 포트폴리오</a></h2>
+          <h2 class="portfolio-title">
+            <a href="./pokemonAPIportfolio/index.html">
+              <i class="fab fa-js-square" style="color: rgb(255, 196, 0);"></i>
+              3. Pokemon API 포트폴리오
+            </a>
+          </h2>
           <div class="portfolio-image-container">
             <img src="./img/javascriptPokemonApiPortfolio.png" alt="javascript pokemon api portfolio image">
           </div>
           <Details>
-            <summary><strong>👇 Keyword</strong>: JavaScript, CSS, HTML, API fetching, eventListener, DOM manipulation, Grid, Responsive</summary>
+            <summary>사용한 기술 보기</summary>
             <p class="portfolio-body">
+              <strong>Keyword</strong>: JavaScript, CSS, HTML, API fetching, eventListener, DOM manipulation, Grid, Responsive
               <p>•외부 API의 가공되지 않은 데이터를 이용하여 완성도 있는 결과물을 보여줄 수 있다는 능력을 보여주고자 하였음.</p>
               <p>•객체지향 프로그래밍 방식으로 자바스크립트의 api fetching, eventListener, DOM manipulation과 CSS의 viewport, grid system을 이용함.</p>
               <p>•객체지향 프로그래밍 방식을 준수하여 직관적이고 재사용이 가능하게 프로그램을 작성함.</p>
@@ -114,13 +132,19 @@
         </article>
 
         <article class="portfolio-container">
-          <h2 class="portfolio-title"><a href="./html5portfolio/index.html""> <i class="fab fa-html5" style="color: rgb(250, 88, 59);"></i> HTML5 WebRTC & Canvas API 포트폴리오</a></h2>
+          <h2 class="portfolio-title">
+            <a href="./html5portfolio/index.html"">
+              <i class="fab fa-html5" style="color: rgb(250, 88, 59);"></i> 
+              4. HTML5 WebRTC & Canvas API 포트폴리오
+            </a>
+          </h2>
           <div class="portfolio-image-container">
             <img src="./img/html5CanvasPortfolio.png" alt="html5 canvas portfolio image">
           </div>
           <Details>
-            <summary><strong>👇 Keyword</strong>: HTML5, JavaScript, CSS, WebRTC, Canvas, Online and offline events, eventListener, Flexbox, Responsive</summary>
+            <summary>사용한 기술 보기</summary>
             <p class="portfolio-body">
+              <strong>Keyword</strong>: HTML5, JavaScript, CSS, WebRTC, Canvas, Online and offline events, eventListener, Flexbox, Responsive
               <p>•MDN 웹사이트의 HTML5의 새 기술을 주체적으로 공부하고 조합하여 포트폴리오를 만듦. 프론트엔드에서 HTML 및 HTML5의 기능에 대한 이해를 심화시키고자 하였음.</p>
               <p>•HTML5의 Camera(WebRTC API), Canvas, Online/Offline events, 그리고 local Storage API를 사용함.</p>
               <p>•WebRTC(Web Real-Time Communication)기술을 이용하여 웹캠으로 사용자의 화면을 실시간 스트리밍하고 사진을 찍을 수 있는 컴포넌트를 제작함.</p>
@@ -133,13 +157,19 @@
         </article>
 
         <article class="portfolio-container">
-          <h2 class="portfolio-title"><a href="./doraemonJSminiGamePortfolio/index.html"> <i class="fab fa-js-square" style="color: rgb(255, 196, 0);"></i> 도라에몽 미니게임 포트폴리오</a></h2>
+          <h2 class="portfolio-title">
+            <a href="./doraemonJSminiGamePortfolio/index.html">
+              <i class="fab fa-js-square" style="color: rgb(255, 196, 0);"></i> 
+              5. 도라에몽 미니게임 포트폴리오
+            </a>
+          </h2>
           <div class="portfolio-image-container">
             <img src="./img/javascriptDoraemonMinigamePortfolio.jpg" alt="javascript doraemon minigame portfolio image">
           </div>
           <Details>
-            <summary><strong>👇 Keyword</strong>: JavaScript, CSS, HTML, Canvas, eventListener, Responsive</summary>
+            <summary>사용한 기술 보기</summary>
             <p class="portfolio-body">
+              <strong>Keyword</strong>: JavaScript, CSS, HTML, Canvas, eventListener, Responsive
               <p>•자바스크립트의 canvas를 중점적으로 이용해 도라에몽(캐릭터)을 움직여 목표 점수를 달성해야 하는 미니 게임을 만듦. 주요한 자바스크립트 사용 능력을 보여주고자 하였음.</p> 
               <p>•자바스크립트의 canvas/context, Image, setInterval(), eventListener등을 여러 function에 알맞게 이용함.</p> 
               <p>•백그라운드 이미지, 도라에몽, 그리고 도라야키(점수 획득용 아이템)를 객체화하고  렌더링하여 게임화하기 위한 설정을 마침.</p> 
