--- a/about-me.html
+++ b/about-me.html
@@ -47,14 +47,14 @@
       </p>
 
       <p>
-        <strong class="about-me-heading">전문적인 프론트엔드 개발자가 되려 합니다. </strong><br><br>
+        <br><strong class="about-me-heading">전문적인 프론트엔드 개발자가 되려 합니다. </strong><br><br>
         제 포트폴리오 웹사이트는 제가 프론트엔드 개발 능력이 있다는 것 또한 보여주고자 만들어졌습니다.
         신입 프론트엔드 개발자로서 무엇을 알아야 하는지 고민했고 웹의 가장 토대가 되는 HTML, CSS, JavaScript를 포트폴리오 전반에 녹여내고자 했습니다. 
         또한 JavaScript 프레임워크 중 가장 보편적으로 사용되는 페이스북의 React를 선택하여 컴포넌트 중심의 웹사이트 제작을 경험했습니다. 
       </p>
 
       <p>
-        <strong class="about-me-heading">바람직한 프론트엔드 웹 서비스가 무엇인지 고민중입니다.</strong><br><br>
+        <br><strong class="about-me-heading">바람직한 프론트엔드 웹 서비스가 무엇인지 고민중입니다.</strong><br><br>
         바람직한 웹 서비스가 무엇인지 생각해봤습니다. 목표한대로 포트폴리오를 완성했지만 막상 만들어보니 아직 부족하다는 느낌을 지울 수 없었기 때문입니다. 
         바람직한 웹 서비스는 무엇인지, 그리고 시장에 나와있는 웹 서비스는 내가 만든 것과 무엇이 다른지 생각해보게 되었습니다.  
         '내 웹사이트 디자인이 부족한가?', '내가 사용한 기술 스택이 더 필요한가?'라는 의문이 들었습니다. <br><br>
@@ -65,7 +65,7 @@
       </p>
 
       <p>
-        <strong class="about-me-heading">바람직한 프론트엔드 개발자가 무엇인지 고민중입니다.</strong><br><br>
+        <br><strong class="about-me-heading">바람직한 프론트엔드 개발자가 무엇인지 고민중입니다.</strong><br><br>
         바람직한 프론트엔드 개발자는 무엇인지 생각해봤습니다. 
         명확한 답변을 내놓을 수 있다면 좋겠지만, 현재 내린 결론은 다음과 같습니다: "<u>바람직한 프론트엔드 개발자는 바람직한 웹 서비스를 만들 수 있는 개발자이다.</u>" <br><br>
         위에서 말한대로, 바람직한 웹사이트는 자신의 수행 목표가 명확하고 그 목표를 수행하는 데에 어려움과 문제가 없습니다. 
@@ -74,12 +74,13 @@
         목표는 때에 따라 달라지니 일반화하기 어렵겠지만, 지금까지 여러 과제와 프로젝트를 진행하며 간략하게나마 사용해본 Top-down, bottom-up, 그리고 Agile 접근이 도움이 되었습니다.
         목표 완수를 돕는 도구가 있다면 시험해보고 채택해보고자 하는 마음을 갖고 있습니다. <br><br>
 
-        목표 완수를 돕는 도구에는 제 신체의 증진과 제가 사용하는 도구의 증진이 있었습니다. 
+        게임에서 캐릭터를 얼른 성장시키고자 하는 마음으로 체력과 지식을 견고히 쌓고자 합니다.
         일주일에 4-5회 1시간씩 규칙적으로 운동하고, 질 좋은 숙면을 취하고, 최근엔 '모던 자바스크립트 Deep Dive'라는 책을 러버덕 형식으로 같이 공부하는 스터디를 시작했습니다.
-        게임에서 캐릭터를 얼른 성장시키고자 하는 마음으로 체력과 지식을 견고히 쌓고자 합니다. <br><br>
+        더 성장하려 욕심부리되 기본기를 놓치지 않으려 합니다.
+        <br><br>
 
-        제가 사용하는 도구를 업그레이드해야 할 필요성을 아직은 크게 느끼지 못하고 있습니다. 
-        직장을 잡고 전문적인 프론트엔드 개발을 시작하게 되면 주변 장비를 업그레이드하고자 하는 생각을 하고 있습니다.
+        
+        추후에 직장을 잡고 전문적인 프론트엔드 개발을 시작하게 되면 주변 장비를 업그레이드하고자 하는 생각을 하고 있습니다.
       </p>
     </main>    
   </div>
