feat(update): name heading link added

--- a/about-me.html
+++ b/about-me.html
@@ -11,7 +11,7 @@
   <header>
     <div class="container container-nav">
       <div class="site-title">
-        <h1>Jinwook Shin</h1>
+        <h1 class="nameHeading"><a href="./index.html">Jinwook Shin</a></h1>
         <p class="subtitle">Portfolio website showcasing front-end projects</p>
       </div>
       <nav>
