before componet design

--- a/noteReactPortfolio/public/index.html
+++ b/noteReactPortfolio/public/index.html
@@ -6,6 +6,7 @@
     <meta name="theme-color" content="#000000" />
     <meta name="description" content="Web site created using create-react-app" />
     <title>React App Template</title>
+    <!-- TODO: 오픈 그래프 학습(시간적 여유가 생겼을 때) -->
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
