feat(update): code refactored

--- a/html5portfolio/index.html
+++ b/html5portfolio/index.html
@@ -36,7 +36,7 @@
 
         <div class="videoButtonsContainer">
           <label class="switch">
-            <input id="checkbox" type="checkbox" type="hidden" />
+            <input id="toggleButton" type="checkbox" type="hidden" />
             <span class="slider round"></span>
           </label>
           <button id="cameraCaptureButton"></button>
