--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         </span>
 
         <span class="file-individual">
-          <i class="far fa-file-alt"></i><a href="./noteReactPortfolio/build/index.html"> <i class="fab fa-react" style="color: rgb(18, 171, 241);"></i> 노트 앱 포트폴리오 </a>
+          <i class="far fa-file-alt"></i><a href="https://reactnoteapp-jinwookshin.netlify.app/"> <i class="fab fa-react" style="color: rgb(18, 171, 241);"></i> 노트 앱 포트폴리오 </a>
         </span>
 
         <span class="file-individual">
@@ -81,7 +81,7 @@
           
         <article class="portfolio-container">
           <h2 class="portfolio-title">
-            <a href="./noteReactPortfolio/build/index.html">
+            <a href="https://reactnoteapp-jinwookshin.netlify.app/">
               <i class="fab fa-react" style="color: rgb(18, 171, 241);"></i> 
               2. 노트 앱 포트폴리오
             </a>
