--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       <div class="portfolio-section-title">목차</div>
       <div id="child-directory">
         <span class="file-individual">
-          <i class="far fa-file-alt"></i><a href="./dogAPIreactPortfolio/build/index.html"> <i class="fab fa-react" style="color: rgb(18, 171, 241);"></i> Dog API 포트폴리오 </a>
+          <i class="far fa-file-alt"></i><a href="https://reactdogapp.netlify.app/"> <i class="fab fa-react" style="color: rgb(18, 171, 241);"></i> Dog API 포트폴리오 </a>
         </span>
 
         <span class="file-individual">
@@ -56,7 +56,7 @@
         <article class="portfolio-container">
           <div class="portfolio-section-title">포트폴리오</div>
           <h2 class="portfolio-title">
-            <a href="./dogAPIreactPortfolio/build/index.html"> 
+            <a href="https://reactdogapp.netlify.app/"> 
               <i class="fab fa-react" style="color: rgb(18, 171, 241);"></i> 
               1. Dog API 포트폴리오 
             </a>
