feat(update): velog section update

--- a/about-me.html
+++ b/about-me.html
@@ -51,6 +51,13 @@
                 </a>
               </h3>
             </div>
+            &nbsp;&nbsp;&nbsp;&nbsp;
+            <div id="links blog-link">
+              <h3>
+                <i class="fab fa-blogger-b"></i>
+                <a href="https://velog.io/@7inug1">&nbsp;velog.io/@7inug1</a>
+              </h3>
+            </div>
             <br />
           </div>
         </div>
