--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     </header>
 
     <div class="contents">
-      <div class="portfolio-section-title">목차</div>
+      <div class="portfolio-section-title">목차1</div>
       <div id="child-directory">
         <span class="file-individual">
           <i class="far fa-file-alt"></i><a href="https://reactdogapp.netlify.app/"> <i class="fab fa-react" style="color: rgb(18, 171, 241);"></i> Dog API 포트폴리오 </a>
