.table-of-contents desktop 업데이트

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
       <div class="table-of-contents">
         <h2 class="title">목차</h2>
         <ul class="contents">
-          <li>
+          <li class="javascript-portfolio-container">
             <h2>
               Ⅰ. JavaScript
               <i class="fab fa-js-square" style="color: rgb(255, 196, 0)"></i>
@@ -57,7 +57,7 @@
               <li>Momentum To-Do App</li>
             </ul>
           </li>
-          <li>
+          <li class="react-portfolio-container">
             <h2>
               Ⅱ. React
               <i class="fab fa-react" style="color: rgb(18, 171, 241)"></i>
@@ -67,7 +67,7 @@
               <li>Note App</li>
             </ul>
           </li>
-          <li>
+          <li class="html-css-portfolio-container">
             <h2>
               Ⅲ. HTML/CSS
               <i class="fab fa-html5" style="color: rgb(250, 88, 59)"></i>
@@ -168,13 +168,6 @@
                         class="portfolio-image"
                         src="./img/js/pokemon.png"
                         alt="포켓몬 API 포트폴리오 데스크탑 버전 페이지 이미지"
-                      />
-                    </a>
-                    <a href="./portfolio/JS/pokemon/index.html">
-                      <img
-                        class="portfolio-image"
-                        src="./img/js/pokemon_mobile.png"
-                        alt="포켓몬 API 포트폴리오 모바일 버전 페이지 이미지"
                       />
                     </a>
                   </div>
