.about-me 및 .contact 마크업 및 스타일 업데이트

--- a/contact.html
+++ b/contact.html
@@ -1,45 +1,57 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.2/css/all.css" integrity="sha384-vSIIfh2YWi9wW0r9iZe7RJPrKwp6bG+s9QZMoITbCckVJqGCCRhc+ccxNcdpHuYu" crossorigin="anonymous">
-  <link rel="stylesheet" href="./style.css">
-  <title>Jinwook Shin's Portfolio Website</title>
-</head>
-<body>
-  <header>
-    <div class="container container-nav">
-      <div class="site-title">
-        <h1 class="nameHeading"><a href="./index.html">Jinwook Shin</a></h1>
-        <p class="subtitle">Portfolio website showcasing front-end projects</p>
-      </div>
-      <nav>
-        <ul>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="stylesheet"
+      href="https://use.fontawesome.com/releases/v5.15.2/css/all.css"
+      integrity="sha384-vSIIfh2YWi9wW0r9iZe7RJPrKwp6bG+s9QZMoITbCckVJqGCCRhc+ccxNcdpHuYu"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="./style.css" />
+    <title>Jinwook Shin's Portfolio Website</title>
+  </head>
+  <body>
+    <header>
+      <div class="container container-nav">
+        <div class="site-title">
+          <h1 class="nameHeading"><a href="./index.html">Jinwook Shin</a></h1>
+          <p class="subtitle">
+            Portfolio website showcasing front-end projects
+          </p>
+        </div>
+        <nav>
+          <ul>
             <li><a href="./index.html">Home</a></li>
             <li><a href="./about-me.html">About me</a></li>
             <li><a href="./contact.html">Contact</a></li>
-        </ul>
-      </nav>  
-    </div> 
-  </header>
+          </ul>
+        </nav>
+      </div>
+    </header>
 
-
-  <div class="portfolio-section-title">연락처</div>
-  <div class="contact-container">
-    <div id="contact-container-phone">
-      <h2>Phone</h2>
-      <div id="phoneNumber"><a href="sms:010-2450-3820">010-2450-3820 (sms)</a></div>
+    <div class="contact-container">
+      <h2 class="title">연락처</h2>
+      <div class="contents">
+        <div id="phone-container">
+          <h2>Phone</h2>
+          <div id="phoneNumber">
+            <a href="sms:010-2450-3820">010-2450-3820 (sms)</a>
+          </div>
+        </div>
+        <div id="email-container">
+          <h2>Email</h2>
+          <div id="emailAddress">
+            <a href="mailto:7inug1@gmail.com">7inug1@gmail.com</a>
+          </div>
+        </div>
+      </div>
     </div>
-    <div id="contact-container-email">
-      <h2>Email</h2>
-      <div id="emailAddress"><a href="mailto:7inug1@gmail.com">7inug1@gmail.com</a></div>
-    </div>
-  </div>
-  <div id=""></div><div></div><div></div><div></div>
 
-  <footer>
-    <small>Copyright &copy; 2021 Jinwook Shin</small><br>
-  </footer>
-</body>
+    <footer>
+      <small>Copyright &copy; 2021 Jinwook Shin</small>
+      <br />
+    </footer>
+  </body>
 </html>
