--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <p>업데이트</p>
         <p>
           HTML/CSS 섹션의 팝업 이미지&링크 및 웹사이트 마크업&스타일링 업데이트
-          (마지막 업데이트 시각: 18:45 21-09-23)
+          (마지막 업데이트 시각: 14:22 21-09-24 (금))
         </p>
       </strong>
     </div>
