.portfolio html-css 섹션 details 업데이트

--- a/index.html
+++ b/index.html
@@ -533,8 +533,41 @@
                 <details class="portfolio-details">
                   <summary class="portfolio-summary">사용한 기술 보기</summary>
                   <div>
-                    <strong></strong>
-                    <ul class="portfolio-body"></ul>
+                    <ul class="portfolio-body">
+                      <li>
+                        1. 시맨틱 마크업 및 스타일링: 시맨틱 마크업(HTML5
+                        이전)과 CSS1,2만을 준수하여 코드를 제작하였습니다.
+                        크로스 브라우징을 배울 수 있었습니다.
+                      </li>
+                      <li>
+                        2. 테이블: 웹 표준성을 준수하며 테이블과 관련한
+                        <code>
+                          caption, colgroup, col, thead, tfoot, tbody, tr, th
+                        </code>
+                        와 같은 다양한 태그를 사용할 수 있게 되었습니다.
+                        <td></td>
+                      </li>
+                      <li>
+                        3. 폼: HTML에서 폼의 기능을 극대화할 수 있게 폼과 그
+                        안에 들어가는
+                        <code>input, select, textarea</code>
+                        및 title과 같은 속성을 사용할 수 있게 되었습니다.
+                      </li>
+                      <li>
+                        4. 팝업: 팝업을 위한 마크업 제작 능력을 익힐 수
+                        있었습니다.
+                      </li>
+                      <li>
+                        5. 그리드 및 배치: CSS3의 flex와 grid를 익혔지만 이를
+                        사용하지 않고 그리드를 제작하며 CSS3 미지원 브라우저에
+                        대처할 수 있게 되었습니다.
+                      </li>
+                      <li>
+                        6. 반응형: 데스크탑 사이즈부터 작게는 280px 너비를 가진
+                        갤럭시 폴드1를 지원하는 반응형 웹사이트를 제작할 수 있게
+                        되었습니다.
+                      </li>
+                    </ul>
                   </div>
                 </details>
                 <dl>
