포트폴리오 업데이트

--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
                 <h2>5. 그리드 및 배치</h2>
                 <ul>
                   <li>선물가게</li>
-                  <li>기갑부대</li>
+                  <!-- <li>기갑부대</li> -->
                   <li>성공가게</li>
                 </ul>
               </li>
@@ -896,7 +896,7 @@
                       </div>
                     </dd>
                   </div>
-                  <div class="portfolio">
+                  <!-- <div class="portfolio">
                     <dt>기갑부대</dt>
                     <dd>
                       <div class="portfolio-image-container">
@@ -910,7 +910,7 @@
                         </a>
                       </div>
                     </dd>
-                  </div>
+                  </div> -->
                   <div class="portfolio">
                     <dt>성공가게</dt>
                     <dd>
